--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Pradipta00 <Pradipta2699@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql": "^2.17.1"
+  }
 }
