--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "backendTs",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Pradipta00 <Pradipta2699@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "multer": "^1.4.2",
-    "mysql": "^2.17.1",
-    "ts-node": "^8.5.4"
-  }
+    "name": "backendTs",
+    "version": "1.0.0",
+    "main": "index.js",
+    "author": "Pradipta00 <Pradipta2699@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "@types/cors": "^2.8.6",
+        "@types/jsonwebtoken": "^8.3.5",
+        "@types/mysql": "^2.15.8",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "moment": "^2.24.0",
+        "multer": "^1.4.2",
+        "mysql": "^2.17.1",
+        "ts-node": "^8.5.4"
+    },
+      "devDependencies": {
+        "@types/express": "^4.17.2",
+        "@types/node": "^12.12.14",
+        "typescript": "^3.7.3"
+    },
+    "scripts": {
+        "dev" : "./node_modules/.bin/ts-node src/index.ts"
+    }
 }
