--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@types/cors": "^2.8.6",
         "@types/jsonwebtoken": "^8.3.5",
+        "@types/multer": "^1.3.10",
         "@types/mysql": "^2.15.8",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -15,14 +16,17 @@
         "moment": "^2.24.0",
         "multer": "^1.4.2",
         "mysql": "^2.17.1",
+        "nodemon": "^2.0.1",
         "ts-node": "^8.5.4"
     },
-      "devDependencies": {
+    "devDependencies": {
         "@types/express": "^4.17.2",
         "@types/node": "^12.12.14",
         "typescript": "^3.7.3"
     },
     "scripts": {
-        "dev" : "./node_modules/.bin/ts-node src/index.ts"
+        "dev": "./node_modules/.bin/ts-node src/index.ts",
+        "devserver": "ts-node src/index.ts",
+        "start": "nodemon --watch . --exec ts-node index.ts "
     }
 }
